k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vybe-backend
  labels:
    app: vybe-backend
spec:
  ports:
  - port: 8000
    targetPort: 8000
    name: http-ws
  selector:
    app: vybe-backend
  type: ClusterIP
